--- a/EMS_Latest/src/main/resources/fxml/Employee.fxml
+++ b/EMS_Latest/src/main/resources/fxml/Employee.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -49,14 +49,20 @@
    <left>
       <VBox prefHeight="571.0" prefWidth="306.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Staff Details" textFill="WHITE">
-               <font>
-                  <Font size="20.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="25.0" top="30.0" />
-               </VBox.margin>
-            </Label>
+            <HBox prefHeight="42.0" prefWidth="296.0">
+               <children>
+                  <Label text="Staff Details" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="employeeId" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="17.0" prefWidth="9.0" textFill="#fcfafa">
+                     <HBox.margin>
+                        <Insets left="5.0" top="8.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <TextField fx:id="staffID" prefHeight="30.0" prefWidth="246.0" promptText="Staff ID">
                <VBox.margin>
                   <Insets left="25.0" right="175.0" />
@@ -223,7 +229,7 @@
                         <DropShadow blurType="ONE_PASS_BOX" color="#00000091" />
                      </effect>
                   </Button>
-                  <Button fx:id="btnLogout12" mnemonicParsing="false" onAction="#logout" prefHeight="30.0" prefWidth="111.0" styleClass="background" text="Leave Module" textFill="#fff9f9" textOverrun="CLIP">
+                  <Button fx:id="leaveModule" mnemonicParsing="false" onAction="#leaveModule" prefHeight="30.0" prefWidth="111.0" styleClass="background" text="Leave Module" textFill="#fff9f9" textOverrun="CLIP">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -262,34 +268,67 @@
             </HBox>
             <VBox prefHeight="650.0" prefWidth="694.0">
                <children>
-                  <TableView fx:id="employeeTable" prefHeight="650.0" prefWidth="679.0" tableMenuButtonVisible="true">
-                    <columns>
-                      <TableColumn fx:id="colstaffID" maxWidth="700.0" prefWidth="51.0" text="ID" />
-                      <TableColumn fx:id="staffNameCol" maxWidth="4000.0" text="Staff Name" />
-                        <TableColumn fx:id="uaeIdCol" maxWidth="4000.0" prefWidth="54.0" text="UAE ID" />
-                        <TableColumn fx:id="colDOB" maxWidth="4000.0" prefWidth="79.0" text="Date of Birth" />
-                        <TableColumn fx:id="batchCol" maxWidth="4000.0" prefWidth="56.0" text="Batch" />
-                        <TableColumn fx:id="grade" maxWidth="4000.0" prefWidth="65.0" text="Grade" />
-                        <TableColumn fx:id="colEmail" maxWidth="6000.0" prefWidth="105.0" text="Email" />
-                        <TableColumn fx:id="colDOJ" maxWidth="6000.0" prefWidth="105.0" text="Join Date" />
-                        <TableColumn fx:id="nationalityCol" maxWidth="4000.0" prefWidth="75.0" text="Nationality" />
-                        <TableColumn fx:id="colEdit" maxWidth="3500.0" prefWidth="75.0" text="Edit" />
-                    </columns>
+                  <BorderPane fx:id="boarderPane">
+                     <center>
+                        <TableView fx:id="employeeTable" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+                          <columns>
+                          	<TableColumn fx:id="colEdit" maxWidth="3000.0" prefWidth="70.0" text="Edit" />
+                            <TableColumn fx:id="colstaffID" prefWidth="60.0" text="ID" />
+                            <TableColumn fx:id="staffNameCol" maxWidth="5000.0" text="Staff Name" />
+                              <TableColumn fx:id="uaeIdCol" maxWidth="6000.0" prefWidth="120.0" text="UAE ID" />
+                              <TableColumn fx:id="colDOB" maxWidth="6000.0" prefWidth="85.0" text="Date of Birth" />
+                              <TableColumn fx:id="batchCol" maxWidth="4000.0" prefWidth="56.0" text="Batch" />
+                              <TableColumn fx:id="grade" maxWidth="4000.0" prefWidth="65.0" text="Grade" />
+                              <TableColumn fx:id="colEmail" maxWidth="10000.0" prefWidth="250.0" text="Email" />
+                              <TableColumn fx:id="colDOJ" maxWidth="6000.0" prefWidth="105.0" text="Join Date" />
+                              <TableColumn fx:id="departmentCol" maxWidth="6000.0" text="Department" />
+                              <TableColumn fx:id="contactCol" maxWidth="6000.0" text="Contact" />
+                              <TableColumn fx:id="designationCol" maxWidth="6000.0" text="Designation" />
+                              <TableColumn fx:id="nsStatusCol" maxWidth="6000.0" prefWidth="90.0" text="NS Status" />
+                              <TableColumn fx:id="nsStartDateCol" maxWidth="6000.0" prefWidth="90.0" text="NS Start Date" />
+                              <TableColumn fx:id="nsEndDateCol" maxWidth="6000.0" prefWidth="90.0" text="NS End Date" />
+                              <TableColumn fx:id="nationalityCol" maxWidth="6000.0" prefWidth="90.0" text="Nationality" />
+                              <TableColumn fx:id="areaOfWorkCol" maxWidth="7000.0" prefWidth="250.0" text="Area of Work" />
+                              <TableColumn fx:id="placeOfBirthCol" maxWidth="6000.0" prefWidth="90.0" text="Place of Birth" />
+                              <TableColumn fx:id="academicCol" maxWidth="6000.0" prefWidth="90.0" text="Academic Qualification" />
+                              <TableColumn fx:id="passportCol" maxWidth="6000.0" prefWidth="90.0" text="Passport" />
+                              <TableColumn fx:id="drivingLicenseCol" maxWidth="6000.0" prefWidth="90.0" text="Driving License" />
+                              <TableColumn fx:id="ojtStartDateCol" maxWidth="6000.0" prefWidth="90.0" text="OJT Start Date" />
+                              <TableColumn fx:id="ojtEndDateCol" maxWidth="6000.0" prefWidth="90.0" text="OJT End Date" />
+                              <TableColumn fx:id="threeHundredCol" maxWidth="6000.0" prefWidth="90.0" text="300 Hrs" />
+                              <TableColumn fx:id="logBookCol" maxWidth="6000.0" prefWidth="90.0" text="Log Book" />
+                              <TableColumn fx:id="majorCol" maxWidth="6000.0" prefWidth="90.0" text="Major" />
+                              <TableColumn fx:id="lineOfManagerCol" maxWidth="10000.0" prefWidth="350.0" text="Line Manager" />
+                              <TableColumn fx:id="workingHrsCol" maxWidth="6000.0" prefWidth="90.0" text="Working Hours" />
+                              <TableColumn fx:id="collegeModulesCol" maxWidth="6000.0" prefWidth="90.0" text="College Modules" />
+                              <TableColumn fx:id="specifyModulesCol" maxWidth="6000.0" prefWidth="90.0" text="Specify Modules" />
+                              <TableColumn fx:id="basicLicenseCol" maxWidth="6000.0" prefWidth="90.0" text="Basic License" />
+                              <TableColumn fx:id="l3CourseTypeCol" maxWidth="6000.0" prefWidth="90.0" text="L3 Course Type" />
+                              <TableColumn fx:id="A380ProjectCol" maxWidth="6000.0" prefWidth="90.0" text="A380 Project" />
+                              <TableColumn fx:id="rfidProjectMemberCol" maxWidth="6000.0" prefWidth="90.0" text="Rfid Project Member" />
+                              <TableColumn fx:id="engineChangeProjectCol" maxWidth="6000.0" prefWidth="90.0" text="Engine Change Project" />
+                              <TableColumn fx:id="cORCertificateCol" maxWidth="6000.0" prefWidth="90.0" text="COR Certificate" />
+                              <TableColumn fx:id="totalLeaveTakenCol" maxWidth="6000.0" prefWidth="90.0" text="Total Leave Taken" />
+                              <TableColumn fx:id="balLeaveCol" maxWidth="6000.0" prefWidth="90.0" text="Balance Leave" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem fx:id="deleteEmployees" mnemonicParsing="false" onAction="#deleteEmployees" text="Delete" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
+                        </TableView>
+                     </center>
+                  </BorderPane>
+                  <Hyperlink onAction="#clickAreaOfWork" text="Area of work status">
                      <VBox.margin>
-                        <Insets left="10.0" right="5.0" />
+                        <Insets />
                      </VBox.margin>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                     <contextMenu>
-                        <ContextMenu>
-                          <items>
-                            <MenuItem fx:id="deleteEmployees" mnemonicParsing="false" onAction="#deleteEmployees" text="Delete" />
-                          </items>
-                        </ContextMenu>
-                     </contextMenu>
-                  </TableView>
-                  <ScrollBar />
+                  </Hyperlink>
                </children>
             </VBox>
             <VBox prefHeight="355.0" prefWidth="694.0">
