--- a/EMS_Latest/src/main/resources/New folder/LeaveScene1.fxml
+++ b/EMS_Latest/src/main/resources/New folder/LeaveScene1.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -22,7 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codetreatise.controller.LeaveDataController">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="/styles/Styles.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.codetreatise.controller.LeaveDataController">
    <top>
       <MenuBar BorderPane.alignment="TOP_LEFT">
         <menus>
@@ -59,17 +60,22 @@
                         <Font size="20.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="70.0" />
+                        <Insets left="60.0" />
                      </HBox.margin>
                   </Label>
+                  <Hyperlink onAction="#backButton" text="Back" textFill="#fcfcfc">
+                     <HBox.margin>
+                        <Insets left="60.0" top="4.0" />
+                     </HBox.margin>
+                  </Hyperlink>
                </children>
             </HBox>
-            <TextField fx:id="staffID" prefHeight="23.0" prefWidth="96.0" promptText="Staff ID">
+            <TextField fx:id="staffID" prefHeight="28.0" prefWidth="96.0" promptText="Staff ID">
                <VBox.margin>
                   <Insets left="25.0" right="175.0" />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="staffName" prefHeight="23.0" prefWidth="246.0" promptText="Staff Name">
+            <TextField fx:id="staffName" editable="false" prefHeight="23.0" prefWidth="246.0" promptText="Staff Name">
                <VBox.margin>
                   <Insets left="25.0" right="25.0" />
                </VBox.margin></TextField>
@@ -104,8 +110,8 @@
                <children>
                   <HBox prefHeight="24.0" prefWidth="246.0" spacing="5.0">
                      <children>
-                        <TextField fx:id="totalLeaveTaken" prefHeight="30.0" prefWidth="246.0" />
-                        <TextField fx:id="balanceLeave" prefHeight="30.0" prefWidth="251.0" />
+                        <TextField fx:id="totalLeaveTaken" editable="false" prefHeight="30.0" prefWidth="246.0" />
+                        <TextField fx:id="balanceLeave" editable="false" prefHeight="30.0" prefWidth="251.0" />
                      </children>
                   </HBox>
                </children>
@@ -132,12 +138,12 @@
             </HBox>
             <HBox layoutX="40.0" layoutY="192.0" prefHeight="33.0" prefWidth="246.0" spacing="5.0">
                <children>
-                  <DatePicker fx:id="fromDate1" editable="false" prefHeight="25.0" prefWidth="264.0" promptText="Approved Date">
+                  <DatePicker fx:id="approvedDate" editable="false" prefHeight="25.0" prefWidth="264.0" promptText="Approved Date">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </DatePicker>
-                  <TextField fx:id="shift" prefHeight="25.0" prefWidth="249.0">
+                  <TextField fx:id="shift" editable="false" prefHeight="25.0" prefWidth="249.0">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -239,20 +245,20 @@
                <children>
                   <BorderPane fx:id="boarderPane">
                      <center>
-                        <TableView fx:id="leaveTable" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+                        <TableView fx:id="leaveTable" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="1101.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
                           <columns>
                           	<TableColumn fx:id="colEdit" maxWidth="1000.0" prefWidth="39.0" text="Edit" />
-                            <TableColumn fx:id="colstaffID" maxWidth="1000.0" minWidth="0.0" prefWidth="64.0" text="ID" />
+                            <TableColumn fx:id="colstaffID" maxWidth="3000.0" minWidth="0.0" prefWidth="100.0" text="ID" />
                             <TableColumn fx:id="staffNameCol" maxWidth="2000.0" prefWidth="50.0" text="Staff Name" />
-                              <TableColumn fx:id="fromDateCol" maxWidth="1000.0" minWidth="0.0" prefWidth="37.0" text="From Date" />
-                              <TableColumn fx:id="toDateCol" maxWidth="1000.0" prefWidth="29.0" text="To Date" />
-                              <TableColumn fx:id="shoftCol" maxWidth="1000.0" prefWidth="30.0" text="Shift" />
-                              <TableColumn fx:id="totalLeaveTakenCol" maxWidth="1000.0" minWidth="0.0" prefWidth="30.0" text="Total Leaves taken" />
-                              <TableColumn fx:id="balanceLeaveCol" maxWidth="1000.0" prefWidth="30.0" text="Balance Leave" />
-                              <TableColumn fx:id="approverNameCol" maxWidth="1000.0" minWidth="0.0" prefWidth="100.0" text="Approver Name" />
-                              <TableColumn fx:id="approvedDateCol" maxWidth="1000.0" minWidth="0.0" prefWidth="50.0" text="Approved Date" />
-                              <TableColumn fx:id="leaveTypeCol" maxWidth="1000.0" minWidth="0.0" prefWidth="41.0" text="Type of Leave" />
-                              <TableColumn fx:id="leaveApprovedYNCol" maxWidth="1000.0" prefWidth="79.0" text="Leave Approved" />
+                              <TableColumn fx:id="fromDateCol" maxWidth="2500.0" minWidth="0.0" prefWidth="100.0" text="From Date" />
+                              <TableColumn fx:id="toDateCol" maxWidth="2500.0" prefWidth="70.0" text="To Date" />
+                              <TableColumn fx:id="shiftCol" maxWidth="2500.0" prefWidth="50.0" text="Shift" />
+                              <TableColumn fx:id="totalLeaveTakenCol" maxWidth="4000.0" minWidth="0.0" prefWidth="120.0" text="Total Leaves taken" />
+                              <TableColumn fx:id="balanceLeaveCol" maxWidth="4000.0" prefWidth="100.0" text="Balance Leave" />
+                              <TableColumn fx:id="approverNameCol" maxWidth="4000.0" minWidth="0.0" prefWidth="150.0" text="Approver Name" />
+                              <TableColumn fx:id="approvedDateCol" maxWidth="4000.0" minWidth="0.0" text="Approved Date" />
+                              <TableColumn fx:id="leaveTypeCol" maxWidth="4000.0" minWidth="0.0" prefWidth="120.0" text="Type of Leave" />
+                              <TableColumn fx:id="leaveApprovedYNCol" maxWidth="4000.0" prefWidth="120.0" text="Leave Approved" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
